# rosbag2_ffi_rs

./: Cargo.toml  LICENSE  build.rs
rosbag2_cpp_interface/: CMakeLists.txt  library.cpp  library.hpp
src/: lib.rs  main.rs
