[package]
name = "rosbag2_ffi_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libc = "0.2.144"
r2r = "0.8.4"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]

cmake = "0.1.50"
bindgen = "0.65.1"
